Add new reference REQUEST_DISCOVER_DOCKER

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "licence": "MIT",
     "version": "1.0.0",
     "require": {
-        "enderlab/tools-bundle": "1.0.0"
+        "enderlab/tools-bundle": "1.0.*"
     },
     "autoload": {
         "psr-4": {
@@ -16,5 +16,11 @@
         "psr-4": {
             "EnderLab\\MarvinManagerBundle\\Tests\\": "tests/"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/ender9108/tools-bundle.git"
+        }
+    ]
 }
